# linux-cmake-gh-actions-sc

./: CMakeLists.txt  sonar-project.properties
src/: main.cpp  mylib.cpp  mylib.h  test.cpp
